--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="home">首页</string>
     <string name="playAll">播放全部</string>
     <string name="toggle_sort">切换排序方式</string>
+    <string name="search">点此搜索</string>
+    <string name="localMusic">本地音乐</string>
+    <string name="historyMusic">历史播放</string>
+    <string name="likeMusic">我喜欢的</string>
+    <string name="add">立即添加</string>
+    <string name="textview">TextView</string>
 </resources>
