新增自动请求权限 自定义背景图片

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,13 +23,13 @@
     <string name="author">2602241712@qq.com</string>
     <string name="app_info">音乐播放软件</string>
     <string name="app_function">音乐软件，支持各大平台非vip歌曲播放</string>
-    <string name="app_about">使用kotlin语言开发，基于MVVM模式集成谷歌官方推荐的JetPack组件库大量组件,视频模块因未找到合适网站接口故暂未开发</string>
-    <string name="app_statement">本项目开源部分已删除所有api，仅用于个人学习。</string>
-    <string name="app_else">该项目在不断完善中，有好的建议或者希望添加某功能以及软件bug请通过下方账号联系作者修改，谢谢</string>
+    <string name="app_about">使用kotlin语言开发，基于MVVM模式集成谷歌官方推荐的JetPack组件库大量组件</string>
+    <string name="app_statement">本项目仅用于学习用途。</string>
+    <string name="app_else">该项目在不断完善中,项目地址请访问：https://gitee.com/k__m/echo_kt</string>
     <string name="matter1">1.除咪咕来源外所有音乐的播放地址是变化的，最短的15分钟变一次，每次打开时请先在首页右上角设置更新播放地址。</string>
-    <string name="matter2">2.播放本地音频请手动打开权限。</string>
-    <string name="matter3">3.歌曲下载功能已被注释，若要使用请联系作者。</string>
-    <string name="matter4">4.安装时若显示签名被修改切勿安装，软件下载地址请访问：https://gitee.com/k__m/echo_kt</string>
+    <string name="matter2">2.歪比歪比，歪比巴卜</string>
+    <string name="matter3">3.歪比歪比，歪比巴卜</string>
+    <string name="matter4">4.歪比歪比，歪比巴卜</string>
     <string name="searchByKeyWord">根据关键字搜索</string>
     <string name="timingClosure">定时关闭</string>
     <string name="floatWindow">悬浮窗</string>
@@ -43,4 +43,5 @@
     <string name="updateComplete">更新成功</string>
     <string name="downloadSettings">下载设置</string>
     <string name="tone">音质</string>
+    <string name="title_activity_demo">DemoActivity</string>
 </resources>
