新增歌词页面，使用compose编写，目前只支持酷狗和咪咕的接口，页面待美化 选择自定义背景时新增裁剪功能 部分图标修改 部分bug修复

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="downloadSettings">下载设置</string>
     <string name="tone">音质</string>
     <string name="title_activity_demo">DemoActivity</string>
+    <string name="text_scanLocalSongs">扫描本地歌曲</string>
+    <string name="text_playAll">全部播放</string>
+    <string name="select_background">从相册选取背景</string>
 </resources>
