修复了本地音乐专辑封面的显示问题 将歌词页移动到播放页中 播放信息页背景改为高斯模糊后的专辑封面 状态栏适配方式修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,8 @@
     <string name="text_scanLocalSongs">扫描本地歌曲</string>
     <string name="text_playAll">全部播放</string>
     <string name="select_background">从相册选取背景</string>
+    <string name="song">歌曲</string>
+    <string name="lyric">歌词</string>
+    <string name="historyList_null">历史列表空无一物</string>
+    <string name="play_all">全部播放</string>
 </resources>
